style.css
/* color pallet -  #DB939A  #E6C983  #6C8647 #B0988C */

html, body {
    width: 100%;
}

*, *::before, *::after {
    box-sizing: border-box;
}

body {
    margin: 0;
    background-color: white;
    color:#333 ;
}

/* #scratch { /*doesn't work with bigger screen 
    width: 80vw;
    height: 60vw;
}   */


a {
  color:black;
}

a:hover {
color: #6C8647 ;
}

#logo {
    font-size: 150px;
    text-align: center;
    font-weight: 300;
}

#sara {
    width: 30%;
    height: 30%;
    float: left;
    margin: 60px 50px 20px 0;
    border-radius: 50px 0 50px 50px;
}

ul { /* there is default padding*/
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    background-color: #333;
    font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;
    font-weight: lighter;
  }

  li {
    float: left;
  }

  li a {
    display: block;
    color:white;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
  }


  li a:hover {
    background-color: #949293;
    transform: scale(1.1);
    color: white;
      }

article {
    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    padding: 20px 30px 20px 30px;
    background-color: #F5F2F1;
    margin-left: 15px;
    margin-right: 15px
}

@media all and (min-width:576px) {
    article {
        margin-left: 40px;
        margin-right: 40px;
    }
}

h1 {
    font-size: 28px;
    font-weight: bold;
}

h2 {
    font-size: 20px;
    font-weight: bold;
    color: #6C8647;
}

h3 {
    font-size: 18px;
    font-weight: bold;
    color: #6C8647;
}

h4 {
    font-size: 48px;
    font-weight: bold;
    color: white;
}

h5 {
    font-size: 18px;
    font-weight: bold;
    color: white;
}

blockquote {
    margin: 40px 40px 40px 40px;
    color: #333;
}

#avatar {
    width: 80vh;
    height: 80vh;
    margin-left: 10px;
    margin-bottom: 50px;
}

.pink {
clear: left;
background-color:  #DB939A;
width: 70%;
height: 3px;
margin-top: 30px;
margin: auto;
border-radius: 30px;
}


blockquote {
    background-color: #DB939A;
    font-weight: bold;
    border-radius: 50px 0 50px 50px;
    padding: 5%;
    opacity: 80%;
}

#git-hub {
    text-align: center;
}

#contact {
    display: inline;
    line-height: 10px;

}

#contact {
    background-color:#B0988C;
    color: white;
    display: block;
    text-align: center;
    margin: 0, 0, 20px, 0;
    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    padding: 5px 20px 20px 20px;
    
}

.contact-link {

    color:white;
    text-align: center;
    font-size: 18px;
    padding: 14px 16px;
    text-decoration: none;
}


.contact-link:hover {
    background-color: #949293;
    transform: scale(1.1);
    color: white;
    }


      /* Underneath is flex
       */
  .navbar ul{
    display: flex;

  }

  .navbar li {
    flex:5

}

.navbar .social {
    flex: 1
}



@media all and (max-width:500px) {


  .navbar ul {
      flex-wrap: wrap;
  }

  .navbar li {
      flex: 1 1 30%;
  }


  .navbar .social {
      flex:1 1 15%;
  }

  .letter {
    font-size: 100px;
  }

  p {
    font-size: 95%; 
  }
  
  h4 {
    font-size: 38px;
    }

    .contact-link {
        font-size: 16px;
    }
}

@media all and (max-width:390px) {
.heading {
    font-size: 95%;
    font-weight: bold;
  }

  p {
    font-size: 90%; 
  }

  .contact-link {
    font-size: 12px;
}

}

@media all and (max-width:325px) {

    .letter {
      font-size: 80px;
    }
  }

  p {
    font-size: 85%; 
  }

  @media all and (max-width:280px) {

    .letter {
      font-size: 48px;
    }

    .heading {
        font-size: 59%;
        font-weight: bold;
      }
   
  }

  p {
    font-size: 80%; 
  }

@media all and (max-width:200px) {

  .letter {
    font-size: 32px;
  }
}

